# cppback

sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: http_server.cpp  json_loader.h  json_serializer.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: json_loader.cpp  json_serializer.cpp  json_serializer.h  main.cpp  request_handler.h
sprint1/problems/radio/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/easy_server/: main  main.cpp
sprint1/samples/server+/: main  main.cpp
sprint1/samples/tcp-udp/: client  server  tcp_client.cpp  udp_client  udp_server
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: application.h  json_loader.cpp  json_loader.h  json_serializer.h  main.cpp  model.cpp  model.h  (+4 more)
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.h  main.cpp  request_handler.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/instrumentation/solution/: app  report
sprint3/problems/load/solution/: ammo.txt  load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: application.h  json_loader.cpp  json_logger.cpp  json_logger.h  main.cpp  model.cpp  model.h  player.cpp  player.h  postgres.cpp  postgres.h  records_repository.h  request_handler.h  state_serialization.cpp  state_serialization.h  tagged_uuid.h
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/solution/src/: extra_data.h  json_loader.cpp
(+82 files in other folders)
